--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.4",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
@@ -30,6 +32,7 @@
     "lucide-react": "^0.265.0",
     "next": "13.4.6",
     "next-auth": "^4.22.1",
+    "next-cloudinary": "^4.17.1",
     "next-themes": "^0.2.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
