--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.15",
     "@hookform/resolvers": "^3.2.0",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.4",
@@ -47,7 +46,6 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@grafbase/sdk": "^0.0.25",
-    "find-unused-exports": "^5.0.0"
+    "@grafbase/sdk": "^0.0.25"
   }
 }
